syntax = "proto3";
package appserver;

import "google/protobuf/empty.proto";

service Backend {
    rpc ping (google.protobuf.Empty) returns (PingReply);
    rpc getChain (google.protobuf.Empty) returns (Chain);
    rpc addBlock (BlockData) returns (Confirmation);
}

message PingReply {
    string message = 1;
}

message Chain {
  repeated Block chain = 1;
}

message Block {
  string timestamp = 1;
  string lastHash = 2;
  string hash = 3;
  string data = 4;
}

message BlockData {
  string payload = 1;
}

message Confirmation {
  string status = 1;
}
